Agregando bootstrap, creando estructura del inicio de sesión, se corrigió el error del footer y del navbar
Co-Authored-By: Sebas175 <60578731+Sebas175@users.noreply.github.com>

--- a/TeamAngular19Comfeco/src/app/auth/recover-pass/recover-pass.component.html
+++ b/TeamAngular19Comfeco/src/app/auth/recover-pass/recover-pass.component.html
@@ -1,1 +1,26 @@
-<p>recover-pass works!</p>
+<app-navbar-recovery-password></app-navbar-recovery-password>
+<div class="container mt-3 mb-2">
+  <div class="content-center">
+    <div class="col-md-6 ml-auto mr-auto rounded py-2 px-4">
+      <div class="card border-purple">
+        <form class="p-5">
+
+          <div class="text-center ">
+            <img class="mb-4" src="assets/img/logos/logo3.png" alt="Logo de Comfeco">
+
+            <h3>Recuperar Contraseña</h3>
+            <div class="form-group">
+              <label for="emailRecoveryPassword">Correo Electrónico</label>
+              <input type="email" class="form-control" id="emailRecoveryPassword" >
+            </div>
+
+          </div>
+
+
+
+          <button type="submit" class="btn btn-purple btn-lg">Enviar Enlace</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
