--- a/TeamAngular19Comfeco/src/app/auth/register/register.component.html
+++ b/TeamAngular19Comfeco/src/app/auth/register/register.component.html
@@ -1,1 +1,35 @@
-<p>register works!</p>
+<h3>Registro</h3>
+<div class="form-group">
+  <label for="nick">Nick</label>
+  <input type="text" class="form-control" id="nick" aria-describedby="Nick">
+</div>
+
+<div class="form-group">
+  <label for="emailRegister">Correo</label>
+  <input type="email" class="form-control" id="emailRegister" aria-describedby="emailHelp">
+</div>
+
+<div class="form-group">
+  <label for="passwordRegister">Contraseña</label>
+  <input type="password" class="form-control" id="passwordRegister">
+</div>
+
+<div class="form-group">
+  <label for="confirmPasswordRegister">Confirmar Contraseña</label>
+  <input type="password" class="form-control" id="confirmPasswordRegister">
+</div>
+
+
+<div class="mt-4">
+
+  <button type="submit" class="btn btn-purple btn-block btn-lg">Crear una cuenta</button>
+</div>
+<div class="form-group mt-1">
+  <div class="form-check">
+    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+    <label class="form-check-label" for="defaultCheck1">
+      <span><a href="#">Términos y Condiciones</a> y <a
+        href="#">Política de privacidad y protección de datos</a> </span>
+    </label>
+  </div>
+</div>
