--- a/TeamAngular19Comfeco/src/app/auth/login/login.component.html
+++ b/TeamAngular19Comfeco/src/app/auth/login/login.component.html
@@ -1,1 +1,18 @@
-<p>login works!</p>
+<h3>Inicio de Sesión</h3>
+
+<div class="form-group">
+  <label for="correo">Correo</label>
+  <input type="email" class="form-control" id="correo" aria-describedby="emailHelp">
+</div>
+
+<div class="form-group">
+  <label for="pass">Contraseña</label>
+  <input type="password" class="form-control" id="pass">
+</div>
+<div class="form-group">
+  <a routerLink="recovery-password">Olvidó su contraseña?</a>
+</div>
+<div class="mt-4">
+
+  <button type="submit" class="btn btn-purple btn-block btn-lg">Iniciar Sesión</button>
+</div>
