--- a/TeamAngular19Comfeco/src/styles.css
+++ b/TeamAngular19Comfeco/src/styles.css
@@ -1,1 +1,22 @@
-/* You can add global styles to this file, and also import other style files */
+/*
+* Footer siempre pegado abajo
+*/
+app-root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+app-footer {
+  margin-top: auto;
+}
+/*
+*Focus de los inputs
+*/
+.form-control:focus {
+  color: #495057;
+  background-color: #fff;
+  border-color: #89188b;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgb(137 24 139 / 24%);
+}
