--- a/TeamAngular19Comfeco/src/app/pages/home/home.component.html
+++ b/TeamAngular19Comfeco/src/app/pages/home/home.component.html
@@ -1,1 +1,2 @@
-<p>home works!</p>
+<p>Bienvenido {{userService.user.displayName}} - <button type="button" (click)="cerrarSession()">Salir</button></p>
+
