--- a/TeamAngular19Comfeco/src/app/auth/recover-pass/recover-pass.component.html
+++ b/TeamAngular19Comfeco/src/app/auth/recover-pass/recover-pass.component.html
@@ -3,7 +3,7 @@
   <div class="content-center">
     <div class="col-md-6 ml-auto mr-auto rounded py-2 px-4">
       <div class="card border-purple">
-        <form class="p-5">
+        <form class="p-5" autocomplete="off" [formGroup]="formu" (ngSubmit)="recuperar()">
 
           <div class="text-center ">
             <img class="mb-4" src="assets/img/logos/logo3.png" alt="Logo de Comfeco">
@@ -11,14 +11,18 @@
             <h3>Recuperar Contraseña</h3>
             <div class="form-group">
               <label for="emailRecoveryPassword">Correo Electrónico</label>
-              <input type="email" class="form-control" id="emailRecoveryPassword" >
+              <input type="email" class="form-control" id="emailRecoveryPassword" formControlName="email" [class.is-invalid]="emailNoValido">
+              <div class="invalid-feedback">
+                El correo es requerido.
+              </div>
             </div>
 
           </div>
 
 
-
-          <button type="submit" class="btn btn-purple btn-lg">Enviar Enlace</button>
+          <div class="text-center">
+            <button type="submit" class="btn btn-purple btn-lg">Enviar Enlace</button>
+          </div>
         </form>
       </div>
     </div>
