--- a/TeamAngular19Comfeco/src/app/auth/register/register.component.html
+++ b/TeamAngular19Comfeco/src/app/auth/register/register.component.html
@@ -19,17 +19,18 @@
   <input type="password" class="form-control" id="confirmPasswordRegister">
 </div>
 
+<div class="form-group mt-1">
+  <div class="form-check">
+    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+    <label class="form-check-label" for="defaultCheck1">
+      <span><a href="https://drive.google.com/file/d/1iIgY0AX4v24mLz4jIbEDfm9ZIOhWlwXE/view?usp=sharing" target="_blank">Términos y Condiciones</a> y <a
+        href="https://drive.google.com/file/d/12eSbJWafqqT0hIQyx8kS7HKCX9dLuTNa/view?usp=sharing" target="_blank">Política de privacidad y protección de datos</a> </span>
+    </label>
+  </div>
+</div>
 
 <div class="mt-4">
 
   <button type="submit" class="btn btn-purple btn-block btn-lg">Crear una cuenta</button>
 </div>
-<div class="form-group mt-1">
-  <div class="form-check">
-    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
-    <label class="form-check-label" for="defaultCheck1">
-      <span><a href="#">Términos y Condiciones</a> y <a
-        href="#">Política de privacidad y protección de datos</a> </span>
-    </label>
-  </div>
-</div>
+
