--- a/TeamAngular19Comfeco/src/app/auth/auth.component.html
+++ b/TeamAngular19Comfeco/src/app/auth/auth.component.html
@@ -3,22 +3,9 @@
   <div class="row justify-content-center">
     <div class="col-md-8 col-lg-6 col-sm-12  rounded py-2 px-4">
       <div class="card border-purple">
-        <form class="text-center p-5">
-          <ul class="nav nav-pills nav-fill mb-5 justify-content-center" id="pills-tab" role="tablist">
-            <li class="nav-item" role="presentation">
-              <a class="nav-link" id="pills-login-tab" data-toggle="pill" routerLink="/login" routerLinkActive="active"
-                 role="tab" aria-controls="pills-login" aria-selected="true">Inicia Sesión</a>
-            </li>
-            <li class="nav-item" role="presentation">
-              <a class="nav-link" id="pills-register" data-toggle="pill" routerLink="/register" routerLinkActive="active"
-              role="tab" aria-controls="pills-profile" aria-selected="false">Regístrate</a>
-            </li>
-
-          </ul>
-          <div class="tab-content" id="pills-tabContent">
+        <div class="text-center p-5">
             <router-outlet></router-outlet>
-          </div>
-        </form>
+        </div>
       </div>
     </div>
 
