--- a/TeamAngular19Comfeco/src/app/auth/login/login.component.html
+++ b/TeamAngular19Comfeco/src/app/auth/login/login.component.html
@@ -1,3 +1,13 @@
+<ul class="nav nav-pills nav-fill mb-5 justify-content-center" id="pills-tab" role="tablist">
+  <li class="nav-item" role="presentation">
+    <a class="nav-link" id="pills-login-tab" data-toggle="pill" routerLink="/login" routerLinkActive="active"
+       role="tab" aria-controls="pills-login" aria-selected="true">Inicia Sesión</a>
+  </li>
+  <li class="nav-item" role="presentation">
+    <a class="nav-link" id="pills-register" data-toggle="pill" routerLink="/register" routerLinkActive="active"
+    role="tab" aria-controls="pills-profile" aria-selected="false">Regístrate</a>
+  </li>
+</ul>
 <h3>Inicio de Sesión</h3>
 <form autocomplete="off" [formGroup]="form" (ngSubmit)="login()">
   <div>
