--- a/TeamAngular19Comfeco/src/app/shared/navbar-recovery-password/navbar-recovery-password.component.html
+++ b/TeamAngular19Comfeco/src/app/shared/navbar-recovery-password/navbar-recovery-password.component.html
@@ -13,7 +13,7 @@
     </ul>
     <form class="form-inline">
       <button class="btn btn-outline-purple ml-2" type="button"
-              routerLink="">Iniciar Sesión
+              routerLink="/login">Iniciar Sesión
       </button>
     </form>
   </div>
