--- a/TeamAngular19Comfeco/src/app/auth/recover-pass/recover-pass.component.html
+++ b/TeamAngular19Comfeco/src/app/auth/recover-pass/recover-pass.component.html
@@ -8,12 +8,10 @@
               <label for="emailRecoveryPassword">Correo Electrónico</label>
               <input type="email" class="form-control" id="emailRecoveryPassword" formControlName="email" [class.is-invalid]="emailNoValido">
               <div class="invalid-feedback">
-                El correo es requerido.
+                El formato del email es incorrecto.
               </div>
         </div>
    </div>
-
-
           <div class="text-center">
             <button type="submit" class="btn btn-purple btn-lg">Enviar Enlace</button>
    </div>
