--- a/TeamAngular19Comfeco/src/app/auth/register/register.component.html
+++ b/TeamAngular19Comfeco/src/app/auth/register/register.component.html
@@ -23,7 +23,7 @@
     <label for="emailRegister">Correo</label>
     <input type="email" class="form-control" id="emailRegister" aria-describedby="emailHelp" formControlName="email">
     <div class="text-danger" *ngIf="campoNoValido('email')">
-      El Email es Obligatorio
+      El formato del email es incorrecto
     </div>
   </div>
   
