#13 Acomodo paneles del home

--- a/TeamAngular19Comfeco/src/app/pages/home/home.component.html
+++ b/TeamAngular19Comfeco/src/app/pages/home/home.component.html
@@ -1,2 +1,25 @@
 <p>Bienvenido {{userService.user.displayName}} - <button type="button" (click)="cerrarSession()">Salir</button></p>
 
+<div class="container-fluid">
+    <div class="row centrar-contenido">
+        <div class="col-8 text-center">
+            <h2>Bienvenidos a Community Fest and Code</h2>
+            <h3>!Conoce gente, aprende y gana!</h3>
+            <p>La próxima edición regresa el 2022, en la cual se planea involucrar a todos los programadores
+                independientemente del área de conocimiento que se encuentre,
+                todo con un mismo proposito, aprender en comunidad.</p>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-lg-2">
+            Comunidades
+        </div>
+        <div class="col-lg-8">
+            Carruseles
+        </div>
+        <div class="col-lg-2">
+            En blanco
+        </div>
+    </div>
+</div>
