Se Agrego el Diseño del Card Comunidad y Contador

--- a/TeamAngular19Comfeco/src/app/pages/home/home.component.html
+++ b/TeamAngular19Comfeco/src/app/pages/home/home.component.html
@@ -12,13 +12,14 @@
     </div>
 
     <div class="row">
-        <div class="col-lg-2">
-            Comunidades
+        <div class="col-lg-3">
+            <app-card-comunidad></app-card-comunidad>
         </div>
-        <div class="col-lg-8">
+        <div class="col-lg-6">
             Carruseles
+                <app-contador></app-contador>
         </div>
-        <div class="col-lg-2">
+        <div class="col-lg-3">
             En blanco
         </div>
     </div>
