--- a/TeamAngular19Comfeco/src/app/components/contador/contador.component.html
+++ b/TeamAngular19Comfeco/src/app/components/contador/contador.component.html
@@ -7,16 +7,16 @@
             <div class="container">
                 <div class="row" style="font-size: 50px;">
                   <div class="col-sm">
-                    {{ eventCollection.day }}
+                    {{ day }}
                   </div>
                   <div class="col-sm">
-                    00
+                    {{ hour }}
                   </div>
                   <div class="col-sm">
-                    00
+                    {{ minutes }}
                   </div>
                   <div class="col-sm">
-                    00
+                    {{ seconds }}
                   </div>
                 </div>
             </div>
