terminando carouseles, falta mejorar el diseño

--- a/TeamAngular19Comfeco/src/styles.css
+++ b/TeamAngular19Comfeco/src/styles.css
@@ -10,6 +10,7 @@ app-root {
 app-footer {
   margin-top: auto;
 }
+
 /*
 *Focus de los inputs
 */
@@ -21,8 +22,23 @@ app-footer {
   box-shadow: 0 0 0 0.2rem rgb(137 24 139 / 24%);
 }
 
-.centrar-contenido{
+.centrar-contenido {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.circle {
+  border-radius: 50%;
+}
+
+a {
+  color: #89188b;
+  text-decoration: none !important;
+  background-color: transparent;
+}
+
+a:hover {
+  color: #89188b;
+  text-decoration: none !important;
 }
