--- a/TeamAngular19Comfeco/src/app/components/card-comunidad/card-comunidad.component.html
+++ b/TeamAngular19Comfeco/src/app/components/card-comunidad/card-comunidad.component.html
@@ -1,5 +1,5 @@
-<div class="col-md-12">
-    <div class="card" style="width: 18rem;">
+
+    <div class="card" >
         <div class="card-header">
             <div class="float-left">Comunidades</div>
             <div class="float-right">
@@ -7,7 +7,7 @@
             </div>
         </div>
         <div class="card-body">
-            <div class=""*ngFor="let item of communitysCollection" >
+            <div class="" *ngFor="let item of communitysCollection" >
                 <div class="">
                     <img style="width: 41px;" class="rounded float-left" [src]="item.urlImage" alt="">
                 </div>
@@ -18,7 +18,6 @@
                     <a href="">Unirse</a>
                 </div>
                 <hr>
-            </div>        
+            </div>
         </div>
       </div>
-</div>
