--- a/TeamAngular19Comfeco/src/app/components/contador/contador.component.html
+++ b/TeamAngular19Comfeco/src/app/components/contador/contador.component.html
@@ -1,6 +1,6 @@
 <div class="col-lg-12">
     <div class="text-center">
-        <p>Preparate lo bueno esta por venir</p>
+        <h4>Preparate lo bueno esta por venir</h4>
     </div>
     <div class="card text-center" style="background-color:lightslategray;">
         <div class="card-body">
