--- a/TeamAngular19Comfeco/src/app/pages/home/home.component.html
+++ b/TeamAngular19Comfeco/src/app/pages/home/home.component.html
@@ -1,25 +1,45 @@
 <app-navbar-user usuario={{userService.user.displayName}}></app-navbar-user>
 
 
-<div class="container-fluid mt-5">
-    <div class="row centrar-contenido">
-        <div class="col-8 text-center">
-            <h2>Bienvenidos a Community Fest and Code</h2>
-            <h3>!Conoce gente, aprende y gana!</h3>
-            <p>La próxima edición regresa el 2022, en la cual se planea involucrar a todos los programadores independientemente del área de conocimiento que se encuentre, todo con un mismo proposito, aprender en comunidad.</p>
-        </div>
+<div class="container">
+  <div class="row my-5">
+    <div class="col-12 text-center">
+      <h2>Bienvenidos a Community Fest and Code</h2>
+      <h3>!Conoce gente, aprende y gana!</h3>
+      <p>La próxima edición regresa el 2022, en la cual se planea involucrar a todos los programadores
+        independientemente del área de conocimiento que se encuentre, todo con un mismo proposito, aprender en
+        comunidad.</p>
     </div>
+  </div>
+</div>
 
-    <div class="row">
-        <div class="col-lg-3">
-            <app-card-comunidad></app-card-comunidad>
-        </div>
-        <div class="col-lg-6">
-            Carruseles
-            <app-contador></app-contador>
-        </div>
-        <div class="col-lg-3">
-            En blanco
-        </div>
+<div class="container-fluid mt-3">
+  <div class="row">
+    <div class="col-lg-3">
+      <app-card-comunidad></app-card-comunidad>
     </div>
+    <div class="col-lg-6">
+
+      <div class="my-4">
+        <h4 class="text-center my-2">Ellos ya creen en esta iniciativa</h4>
+        <app-carousel-content-creators *ngIf="contentCreators"
+                                       [contentCreators]="contentCreators"></app-carousel-content-creators>
+      </div>
+
+      <div class="my-4">
+        <app-carousel-sponsors *ngIf="sponsors" [sponsors]="sponsors"></app-carousel-sponsors>
+      </div>
+      <div class="my-5">
+
+
+          <app-contador></app-contador>
+
+
+      </div>
+
+    </div>
+    <div class="col-lg-3">
+
+    </div>
+  </div>
 </div>
