--- a/TeamAngular19Comfeco/src/app/components/carousel-content-creators/carousel-content-creators.component.html
+++ b/TeamAngular19Comfeco/src/app/components/carousel-content-creators/carousel-content-creators.component.html
@@ -1,22 +1,9 @@
 <swiper class="swiper-container" fxFlex="auto" [config]="config">
-
-
     <div class="swiper-slide h-auto " *ngFor="let contentCreator of contentCreators">
-        <div class="w-150 bg-secondary">
-            <img class="img-fluid" [src]="contentCreator.urlImage" [alt]="contentCreator.name">
-
-            <div class="text-center mt-n5">
-
-                <img style="width: 60px" [src]="contentCreator.urlLanguajeLogo" alt="">
-
-            </div>
-
-            <div class="py-3">
-                <h5 class="text-center">{{contentCreator.name}}</h5>
-
-            </div>
+        <div class="cardCreators">
+            <img class="creatorImg" [src]="contentCreator.urlImage" [alt]="contentCreator.name">
+            <img class="languajeIcon" [src]="contentCreator.urlLanguajeLogo" alt="">
+            <h5 class="creatorName textoUnaLinea">{{contentCreator.name}}</h5>
         </div>
     </div>
-
-
 </swiper>
