--- a/TeamAngular19Comfeco/src/app/pages/home/home.component.html
+++ b/TeamAngular19Comfeco/src/app/pages/home/home.component.html
@@ -1,14 +1,16 @@
 <app-navbar-user usuario={{userService.user.displayName}}></app-navbar-user>
 
 
-<div class="container">
+<div class="container-fluid">
   <div class="row my-5">
-    <div class="col-12 text-center">
-      <h2>Bienvenidos a Community Fest and Code</h2>
+    <div class="col-6 offset-3 text-center">
+      <div class="col-12">
+        <h2>Bienvenidos a Community Fest and Code</h2>
       <h3>!Conoce gente, aprende y gana!</h3>
       <p>La próxima edición regresa el 2022, en la cual se planea involucrar a todos los programadores
         independientemente del área de conocimiento que se encuentre, todo con un mismo proposito, aprender en
         comunidad.</p>
+      </div>
     </div>
   </div>
 </div>
@@ -20,7 +22,7 @@
     </div>
     <div class="col-lg-6">
 
-      <div class="my-4">
+      <div>
         <h4 class="text-center my-2">Ellos ya creen en esta iniciativa</h4>
         <app-carousel-content-creators *ngIf="contentCreators"
                                        [contentCreators]="contentCreators"></app-carousel-content-creators>
