--- a/TeamAngular19Comfeco/src/app/shared/navbar-user/navbar-user.component.html
+++ b/TeamAngular19Comfeco/src/app/shared/navbar-user/navbar-user.component.html
@@ -21,6 +21,7 @@
                     {{usuario}}
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" routerLink="/private/perfil">Mi perfil</a>
                         <a class="dropdown-item" (click)="cerrarSession()">Cerrar sesión</a>
                     </div>
                 </div>
