Pre-Autorecion de Routes

--- a/TeamAngular19Comfeco/src/app/shared/navbar-user/navbar-user.component.html
+++ b/TeamAngular19Comfeco/src/app/shared/navbar-user/navbar-user.component.html
@@ -5,12 +5,22 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/private/home" routerLinkActive="active" >Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/private/comunidades" routerLinkActive="active">Comunidades</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/private/talleres" routerLinkActive="active">Talleres</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" routerLink="/private/creadores" routerLinkActive="active">Creadores de contenido</a>
+            </li>
         </ul>
-        <form class="form-inline">
+        <form class="form-inline my-2 my-lg-0">
             <i class="far fa-bell"></i>
             <div class="perfil">
                 <div class="foto-perfil">
