--- a/TeamAngular19Comfeco/src/app/components/contador/contador.component.html
+++ b/TeamAngular19Comfeco/src/app/components/contador/contador.component.html
@@ -1,6 +1,7 @@
 <div class="col-lg-12">
     <div class="text-center">
-        <h4>{{event.titlePhase}}</h4>
+        <!-- <h4>{{event.titlePhase}}</h4> -->
+        <h4>Fase 2</h4>
     </div>
     <div class="card text-center" style="background-color:lightslategray;">
         <div class="card-body">
