Corrigiendo nombre de componentes, modulos y UI de my-info

--- a/TeamAngular19Comfeco/src/app/shared/navbar-user/navbar-user.component.html
+++ b/TeamAngular19Comfeco/src/app/shared/navbar-user/navbar-user.component.html
@@ -31,7 +31,7 @@
                     {{usuario}}
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" routerLink="/private/sub-page">Mi perfil</a>
+                        <a class="dropdown-item" routerLink="/private/my-info">Mi perfil</a>
                         <a class="dropdown-item" (click)="cerrarSession()">Cerrar sesión</a>
                     </div>
                 </div>
