--- a/TeamAngular19Comfeco/src/app/shared/navbar-user/navbar-user.component.html
+++ b/TeamAngular19Comfeco/src/app/shared/navbar-user/navbar-user.component.html
@@ -24,7 +24,7 @@
             <i class="far fa-bell"></i>
             <div class="perfil">
                 <div class="foto-perfil">
-                    <i class="fas fa-user"></i>
+                    <img [src]="userService.user.urlAvatar" alt="">
                 </div>
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
