--- a/TeamAngular19Comfeco/src/app/auth/login/login.component.html
+++ b/TeamAngular19Comfeco/src/app/auth/login/login.component.html
@@ -9,7 +9,7 @@
   </li>
 </ul>
 <h3>Inicio de Sesión</h3>
-<form autocomplete="off" [formGroup]="form" (ngSubmit)="login()">
+<form [formGroup]="form" (ngSubmit)="login()">
   <div>
     <div class="form-group">
       <label for="correo">Correo</label>
